--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
+Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 
 ===Pronunciation===
 * {{IPA|/ˈmæksɪməm/|lang=en}}
@@ -14,15 +14,15 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 ===Noun===
 {{en-noun|maxima|s}}
 
-# The [[high|highest]] [[limit]].
+# The [[high|highest]] [[limit]]
 #* P. Colquhoun
 #*: Good legislation is the art of conducting a nation to the '''maximum''' of happiness, and the minimum of misery.
-# {{lb|en|mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, especially the [[global maximum]] or a [[local maximum]] of a [[function]].
-# {{lb|en|analysis}} An [[upper]] [[bound]] of a set which is also an element of that set.
-# {{lb|en|statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]].
-# {{lb|en|colloquial|snooker}} A 147 break; the highest possible break.
-# {{lb|en|colloquial|darts}} A [[score]] of [[180]] with three darts.
-# {{lb|en|colloquial|cricket}} A scoring shot for 6 runs.
+# {{lb|en|mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, especially the [[global maximum]] or a [[local maximum]] of a [[function]]
+# {{lb|en|analysis}} An [[upper]] [[bound]] of a set which is also an element of that set
+# {{lb|en|statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]]
+# {{lb|en|colloquial|snooker}} A 147 break; the highest possible break
+# {{lb|en|colloquial|darts}} A [[score]] of [[180]] with three darts
+# {{lb|en|colloquial|cricket}} A scoring shot for 6 runs
 
 ====Usage notes====
 * {{m|en|maxima|Maxima}} is the more common plural, especially for the technical senses.
@@ -39,9 +39,9 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 
 ====Translations====
 {{trans-top|highest limit}}
-* Armenian: {{t+|hy|մաքսիմում|sc=Armn}}
+* Armenian: {{t+|hy|մաքսիմում}}
 * Chinese:
-*: Mandarin: {{t+|cmn|最大|tr=zuìdà|sc=Hani}}, {{t+|cmn|極大|sc=Hani}}, {{t+|cmn|极大|tr=jídà|sc=Hani}}
+*: Mandarin: {{t+|cmn|最大|tr=zuìdà}}, {{t+|cmn|極大}}, {{t+|cmn|极大|tr=jídà}}
 * Czech: {{t+|cs|maximum|n}}
 * Esperanto: {{t|eo|maksimumo}}
 * Finnish: {{t+|fi|maksimi}}, {{t|fi|yläraja}}
@@ -52,18 +52,18 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Hebrew: {{t|he|מַכְּסִימוּם|m|tr=maximum}}, {{t+|he|מֵרַב|m|tr=mēráv}}
 * Ido: {{t+|io|maximo}}
 * Italian: {{t+|it|massimo|m}}
-* Japanese: {{t+|ja|最大|tr=さいだい, saidai|sc=Jpan}}, {{t|ja|極大|tr=きょくだい, kyokudai|sc=Jpan}}
+* Japanese: {{t+|ja|最大|tr=さいだい, saidai}}, {{t|ja|極大|tr=きょくだい, kyokudai}}
 {{trans-mid}}
 * Latin: {{t+|la|maximum}}
 * Malay: {{t|ms|maksimum}}
 * Maori: {{t|mi|mōrahi}}, {{t|mi|tihi}}
-* Persian: {{t+|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t+|fa|ماکسیمم|tr=mâksimom|sc=fa-Arab}}
+* Persian: {{t+|fa|بیشینه|tr=bišine}}, {{t+|fa|ماکسیمم|tr=mâksimom}}
 * Portuguese: {{t+|pt|máximo|m}}
 * Romanian: {{t+|ro|maximum}}, {{t+|ro|maxim|n}}
 * Russian: {{t+|ru|ма́ксимум|m}}
 * Spanish: {{t+|es|máximo}}
 * Swedish: {{t+|sv|maximum|n}}
-* Telugu: {{t|te|గరిష్ఠం|tr=garishThaM}}
+* Telugu: {{t|te|గరిష్ఠం}}
 * Turkish: {{t|tr|en fazla}}
 * Vietnamese: {{t-needed|vi}}
 * Welsh: {{t+|cy|uchafswm}}
@@ -71,25 +71,25 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 
 {{trans-top|math: greatest value}}
 * Chinese:
-*: Mandarin: {{t+|cmn|最大值|tr=zuìdàzhí|sc=Hani}}
+*: Mandarin: {{t+|cmn|最大值|tr=zuìdàzhí}}
 * Czech: {{t+|cs|maximum|n}}
 * Finnish: {{t+|fi|maksimi}}, {{t|fi|[[suurin]] [[arvo]]}}
 * German: {{t+|de|Maximum|n}}
 * Italian: {{t+|it|massimo|m}}
-* Persian: {{t+|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t+|fa|ماکسیمم|tr=mâksimom|sc=fa-Arab}}
+* Persian: {{t+|fa|بیشینه|tr=bišine}}, {{t+|fa|ماکسیمم|tr=mâksimom}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|máximo|m}}
 * Russian: {{t+|ru|ма́ксимум|m}}
 * Spanish: {{t+|es|máximo}}
 * Swedish: {{t+|sv|maximum|n}}
 * Tagalog: {{t|tl|higdulan}}
-* Telugu: {{t|te|గరిష్ఠం|tr=garishThaM}}
+* Telugu: {{t|te|గరిష్ఠం}}
 * Vietnamese: {{t|vi|cực trị}}
 {{trans-bottom}}
 
 {{trans-top|statistics: largest value of a batch}}
 * Finnish: {{t|fi|maksimiarvo}}, {{t|fi|[[suurin]] [[arvo]]}}
-* Persian: {{t+|fa|ماکسیمم|tr=mâksimom|sc=fa-Arab}}
+* Persian: {{t+|fa|ماکسیمم|tr=mâksimom}}
 {{trans-mid}}
 * Russian: {{t+|ru|ма́ксимум|m}}
 * Swedish: {{t+|sv|maximum|n}}
@@ -99,16 +99,14 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 {{en-adj|-}}
 
 # To the highest degree.
-#: ''Use the proper dose for the '''maximum''' effect.''
-
-====Synonyms====
-* {{l|en|maximal}}
+#: {{ux|en|Use the proper dose for the '''maximum''' effect.}}
+#: {{syn|en|maximal}}
 
 ====Translations====
 {{trans-top|highest degree}}
 * Catalan: {{t+|ca|màxim}}
 * Chinese:
-*: Mandarin: {{t+|cmn|最大|tr=zuìdà|sc=Hani}}, {{t+|cmn|極大|sc=Hani}}, {{t+|cmn|极大|tr=jídà|sc=Hani}}
+*: Mandarin: {{t+|cmn|最大|tr=zuìdà}}, {{t+|cmn|極大}}, {{t+|cmn|极大|tr=jídà}}
 * Finnish: {{t+|fi|maksimi|alt=maksimi-}}, {{t+|fi|maksimaalinen}}, {{t|fi|[[mahdollisimman]] [[suuri]]}}
 * French: {{t+|fr|maximum}}, {{t+|fr|maximal}}
 * German: {{t+|de|maximal}}
@@ -116,28 +114,27 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Ido: {{t+|io|maxima}}
 * Italian: {{t+|it|massimo|m}}
 {{trans-mid}}
-* Japanese: {{t+|ja|最大|tr=さいだい, saidai|sc=Jpan}}, {{t|ja|極大|tr=きょくだい, kyokudai|sc=Jpan}}
+* Japanese: {{t+|ja|最大|tr=さいだい, saidai}}, {{t|ja|極大|tr=きょくだい, kyokudai}}
 * Portuguese: {{t+|pt|máximo}}
 * Russian: {{t+|ru|максима́льный}}
 * Spanish: {{t+|es|máximo}}
 * Tagalog: {{t|tl|higdulin}}
-* Telugu: {{t|te|గరిష్ఠ|tr=garishTha}}
+* Telugu: {{t|te|గరిష్ఠ}}
 * Turkish: {{t+|tr|maksimum}}
 * Vietnamese: {{t+|vi|tối đa}}
 {{trans-bottom}}
 
 ===Derived terms===
-{{der-top}}
-* {{l|en|antimaximum}}
-* {{l|en|global maximum}}
-* {{l|en|local maximum}}
-* {{l|en|maximal}}
-{{der-mid}}
-* {{l|en|maximize}}
-* {{l|en|maximum break}}
-* {{l|en|maximum limit}}
-* {{l|en|submaximum}}
-{{der-bottom}}
+{{der4
+|antimaximum
+|global maximum
+|local maximum
+|maximal
+|maximize
+|maximum break
+|maximum limit
+|submaximum
+|lang=en}}
 
 ===Related terms===
 * {{l|en|supremum}}
