--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -46,7 +46,10 @@ From {{bor|fr|arq|-}}, from {{der|fr|ar|بِلَاد}}
 # {{lb|fr|somewhat|_|pejorative}} [[village]]
 #* {{quote-song|lyricist={{w|lang=en|Elh Kmer}}|title=Homicide|year=2017|album=Indépendant|lang=fr|passage=Je ferais pas d’efforts d’intégration si ce '''bled''' ne m’aime pas}}
 
-I won’t make any effort in order to be part of the community if this village doesn’t like me.
+===Further reading===
+* {{R:TLFi}}
+
+----
 
 ==Middle English==
 
