--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -58,6 +58,23 @@
 
 ----
 
+==Italian==
+
+===Pronunciation===
+* {{it-IPA|abandóno}}
+* {{it-stress|abandóno}}
+* {{hyph|a|ban|do|no|lang=it}}
+
+===Noun===
+{{it-noun|m}}
+
+# {{obsolete form of|abbandono|lang=it}}
+
+===References===
+* {{R:DIO}}
+
+----
+
 ==Mirandese==
 
 ===Noun===
