/* Italian */ Expanded entry <abaco#52082050>

--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -11,7 +11,7 @@
 ==Italian==
 
 ===Alternative forms===
-* {{l|it|abbaco}}
+* {{alter|it|abbaco||uncommon, except in the meaning of “art of counting”}}
 
 ===Etymology===
 From {{etyl|la|it}} {{m|la|abacus||counting board}}, from {{etyl|grc|it}} {{m|grc|ἄβαξ||board}}.
@@ -24,17 +24,23 @@ From {{etyl|la|it}} {{m|la|abacus||counting board}}, from {{etyl|grc|it}} {{m|gr
 ===Noun===
 {{it-noun|m}}
 
-# [[abacus]], [[plinth]], [[multiplication-table]]
-
-====Synonyms====
-* {{l|it|pallottoliere}}
-* {{l|it|tavola pitagorica}}
+# [[abacus]] {{gloss|calculating frame}}
+# [[multiplication table]]
+#: {{syn|it|tavola pitagorica}}
+# The [[art]] of [[counting]].
+# {{lb|it|historical|Ancient Rome}} A [[board]] used to [[expose]] [[pottery]] during [[banquet]]s.
+# {{lb|it|furniture}} [[abacus]] {{gloss|church furniture}}
+#: {{syn|it|credenza|q1=more commone}}
+# {{lb|it|architecture}} [[abacus]] {{gloss|uppermost portion of the capital of a column}}
 
 ====Derived terms====
 * {{l|it|abachista}}
 
-===Further reading===
-* {{R:DIO}}
+===See also===
+* {{l|it|pallottoliere}}
+
+===References===
+* {{R:it:Trec}}
 * {{R:CIE}}
 
 ----
