/* Pronunciation */Added content. <blow#52093790>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -4,7 +4,7 @@
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/bləʊ/|[bləʊ̯]|lang=en}}
-* {{a|US}} {{IPA|/bloʊ/|[bloʊ̯]|lang=en}}
+* {{a|US}} {{IPA|/bloʊ/|[blɵʊ̯]|lang=en}}
 * {{audio|en-us-blow.ogg|Audio (US)|lang=en}}
 * {{rhymes|əʊ|lang=en}}
 
