--- a/en/r/ready-made.741519.wikitext
+++ b/en/r/ready-made.741519.wikitext
@@ -40,6 +40,7 @@
 * Finnish: {{t+|fi|valmis|alt=valmis-}}
 * French: {{t+|fr|tout fait}}
 * Russian: {{t|ru|[[заранее]] [[приготовленный]]}}
+* Swedish: {{t|sv|färdiggjort}}
 {{trans-bottom}}
 
 ====See also====
