--- a/en/p/Pax Britannica.855985.wikitext
+++ b/en/p/Pax Britannica.855985.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|la|en}}
+Modelled on {{m|en|Pax Romana}}, from {{etyl|la|en}}.
 
 ===Proper noun===
 {{en-proper noun|head=Pax Britannica}}
