--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -73,13 +73,12 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 #*: '''Again''', it is of great consequence to avoid, etc.
 
 ====Derived terms====
-{{der-top}}
-* {{l|en|again and again}}
-* {{l|en|again-coming}}
-{{der-mid}}
-* {{l|en|agenbite}}
-* {{l|en|once again}}
-{{der-bottom}}
+{{der4
+|again and again
+|again-coming
+|agenbite
+|once again
+|lang=en}}
 
 ====Translations====
 {{trans-top|back to a former place or state}}
@@ -100,7 +99,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Afrikaans: {{t+|af|weer}}, {{t|af|alweer}}
 * Albanian: {{t+|sq|përsëri}}
 * Arabic: {{t|ar|مَرَّة أُخْرَى|f|tr=marra ʾuḵrā}}, {{t|ar|كَرَّة أُخْرَى|f|tr=karra ʾuḵrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثَانِيَةً}}
-*: Egyptian Arabic: {{t|arz|تاني|tr=tani}}, {{t|arz|كمان|tr=kaman - kman}}
+*: Egyptian Arabic: {{t|arz|تاني|tr=tāni}}, {{t|arz|كمان|tr=kamān ~ kmān}}
 * Aragonese: {{t-needed|an}}
 * Armenian: {{t+|hy|էլի}}, {{t+|hy|կրկին}}, {{qualifier|Eastern-Armenian}} {{t+|hy|նորից}}, {{qualifier|Western-Armenian}} {{t+|hy|նորեն}}
 * Assamese: {{t|as|আকৌ}}
@@ -114,7 +113,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Berber:
 *: Tashelhit: {{t|shi|dax}}
 * Breton: {{t+|br|adarre}}
-* Bulgarian: {{t+|bg|повто̀рно|sc=Cyrl}}, {{t+|bg|отно̀во|sc=Cyrl}}, {{t+|bg|пак|sc=Cyrl}}
+* Bulgarian: {{t+|bg|повто̀рно}}, {{t+|bg|отно̀во}}, {{t+|bg|пак}}
 * Burmese: {{t|my|နောက်တဖန်}}, {{t+|my|ထပ်}}, {{t+|my|ပြန်လှန်}}
 * Catalan: {{t|ca|una altra vegada}}, {{t|ca|de nou}}, {{t|ca|un altre cop}}
 * Central Sierra Miwok: {{t|csm|ˀičáˀ}}
@@ -158,7 +157,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Kyrgyz: {{t+|ky|дагы}}, {{t+|ky|кайтадан}}, {{t|ky|жаңыдан}}
 * Lao: {{t|lo|ອີກ}}
 {{trans-mid}}
-* Latin: {{t|la|denuo}}, {{t|la|iterum}}
+* Latin: {{t|la|dēnuō}}, {{t|la|iterum}}
 * Latvian: {{t|lv|atkal}}
 * Lithuanian: {{t+|lt|vėl}}
 * Low German:
@@ -229,16 +228,18 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * German: {{t+|de|nochmal}}, {{t+|de|gleich}}, {{t+|de|doch}}, {{t+|de|noch}}
 * Greek: {{t+|el|ξανά}}, {{t+|el|πάλι}}
 * Hungarian: {{t+|hu|is}}
-{{trans-mid}}
 * Japanese: {{t+|ja|っけ|tr=kke}}
+{{trans-mid}}
 * Korean: {{t|ko|ᆻ지}}, {{t|ko|ᆻ죠}}
 * Mongolian: {{t|mn|билээ}}
 * Portuguese: {{t+|pt|mesmo}}
 * Russian: {{t|ru|говори́те}}
-* Serbo-Croatian: {{t|sh|beše}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|беше}}
+*: Roman: {{t|sh|beše}}
 * Spanish: {{t+|es|de nuevo}}
 * Swedish: {{t+|sv|igen}}
-* Tagalog: {{t+|tl|ano}}?, ano {{t|tl|ulit}}? ano {{t+|tl|po}}? (formal)
+* Tagalog: {{t+|tl|ano}}, {{t|tl|ulit|alt=ano ulit}}, {{t+|tl|po|alt=ano po}} {{q|formal}}
 {{trans-bottom}}
 
 {{trans-top|in return}}
