--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -245,7 +245,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 {{trans-top|in return}}
 * Hungarian: {{t+|hu|vissza}}, {{t+|hu|viszont}}
 {{trans-mid}}
-* Latin: {{t|la|rursus}}
+* Latin: {{t|la|rūrsus}}
 {{trans-bottom}}
 
 ===Preposition===
