--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -26,6 +26,8 @@
 {{en-noun}}
 
 # {{initialism of|lang=en|parent-teacher organization}}
+# {{initialism of|lang=en|[[paid]] [[time off]]
+# {{initialism of|lang=en|[[power take-off]]|dot=,}} a powered shaft for driving auxiliary equipment.
 
 ====Synonyms====
 * {{sense|parent-teacher organization}} {{l|en|PTA|gloss=parent-teacher association}}
@@ -37,13 +39,10 @@
 * Japanese: {{t|ja|PTA}}
 {{trans-bottom}}
 
-===Initialism===
-{{rfc-header|Initialism}}
-{{head|en|initialism}}
+===Phrase===
+{{en-phrase}}
 
-# Please turn over (written at the end of the text on a page to say that it continues overleaf)
-# Paid time off
-# [[power take-off]], a powered shaft for driving auxiliary equipment.
+# {{initialism of|lang=en|[[please]] [[turn over]]|nodot=1}} (written at the end of the text on a page to say that it continues overleaf)
 
 ====Translations====
 {{trans-top|Please turn over}}
