/* English */ {{bor}} is only for the immediate source; use {{der}} for the others <bamboo#52125572>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -4,7 +4,7 @@
 [[File:A aesthetic Bamboo poles.JPG|thumb]]
 
 ===Etymology===
-Borrowed from {{bor|en|nl|bamboe}}, from {{bor|en|pt|bambu}}, from {{bor|en|ms|bambu}}, from {{bor|en|kn|ಬಂಬು}}. {{etystub|en}}
+Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|bambu}}, from {{der|en|kn|ಬಂಬು}}. {{etystub|en}}
 
 ===Pronunciation===
 * {{IPA|/bæmˈbu/|lang=en}}
