--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -18,7 +18,7 @@ Borrowed from {{bor|nl|id|bahasa}}, eventually from {{der|nl|sa|भाषा||la
 ==Indonesian==
 
 ===Etymology===
-From {{etyl|ms|id}} {{m|ms|bahasa}}, from {{etyl|sa|id}} {{m|sa|भाषा||language}}.
+From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 
 ===Noun===
 {{id-noun}}
