/* English */ IPA <Wembley#52127131>

--- a/en/w/Wembley.803277.wikitext
+++ b/en/w/Wembley.803277.wikitext
@@ -4,6 +4,8 @@
 ===Etymology===
 Derived from the Old English proper name ''Wemba'' and {{inh|en|ang|lēah|t=clearing in a forest}}.
 
+===Pronunciation===
+* {{a|UK}} {{IPA|/wɛmbli/|lang=en}}
 ===Proper noun===
 {{wikipedia|Wembley Stadium}}
 {{en-proper noun}}
