--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -43,7 +43,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # Anything lacking firmness or solidity; a cheat or fraud; an empty project.
 #* Shakespeare
 #*: Then a soldier {{...}} / Seeking the '''bubble''' reputation / Even in the cannon's mouth.
-# {{lb|en|Cockney rhyming slang}} A [[laugh]]. (''also:'' [[bubble bath]])
+# {{lb|en|Cockney rhyming slang}} A [[laugh]] (''also:'' [[bubble bath]]).
 #: ''Are you having a '''bubble'''?!''
 # {{lb|en|computing}} Any of the small magnetized areas that make up [[bubble memory]].
 # {{lb|en|poker}} The point in a poker [[tournament]] when the last player without a prize loses all their [[chip]]s and leaves the game, leaving only players that are going to win prizes. (e.g., if the last remaining 9 players win prizes, then the point when the 10th player leaves the tournament)
