t+it:[[parte]] ([[WT:EDIT|Assisted]]) <division#52169462>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -134,6 +134,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * German: {{t+|de|Teil|m}}
 * Indonesian: {{t+|id|bagian}}
 * Irish: {{t|ga|urrann|f}}
+* Italian: {{t+|it|parte|f}}
 * Kurdish:
 *: Sorani: {{t|ckb|بەش|tr=beş}}
 * Macedonian: {{t|mk|дел|m}}
