--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -275,6 +275,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Hebrew: {{t|he|אוגדה|f|tr=ugdá|sc=Hebr}}
 * Icelandic: {{t+|is|herdeild|f}}, {{t+|is|deild|f}}
 * Indonesian: {{t+|id|divisi}}
+* Italian: {{t+|it|divisione|f}}
 * Japanese: {{t+|ja|師団|tr=しだん, shidan}}
 * Khmer: {{t|km|កងពលធំ}}
 {{trans-mid}}
