--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -231,7 +231,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 *: Mandarin: {{t+|cmn|理論|sc=Hani}}, {{t+|cmn|理论|tr=lǐlùn|sc=Hani}}, {{t+|cmn|學說|sc=Hani}}, {{t+|cmn|学说|tr=xuéshuō|sc=Hani}}
 * Czech: {{t+|cs|teorie|f}}
 * Dutch: {{t+|nl|theorie}}
-* Finnish: {{t+|fi|teoria}}
+* Finnish: {{t+|fi|teoria}}, {{t+|fi|oppi}}
 * French: {{t+|fr|théorie|f}}
 * Galician: {{t|gl|teoría|f}}
 * German: {{t+|de|Theorie|f}}
