--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -200,7 +200,7 @@ From {{der|hu|la|-um||2nd declension neuter nominative singular termination}}.
 * {{IPA|/um/|lang=sga}}
 
 ===Suffix===
-{{head|sga|suffix|cat2=pronouns|[[Appendix:Old Irish affixed pronouns|suffixed pronoun]]}}
+{{head|sga|suffix|cat2=personal pronouns|[[Appendix:Old Irish affixed pronouns|suffixed pronoun]]}}
 
 # [[me]]
 
