t+ka:[[ყიყინი]] ([[WT:EDIT|Assisted]]) <quack#52246133>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -26,6 +26,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Faroese: {{t|fo|gvagg}}, {{t|fo|kvagg}}
 * Finnish: {{t|fi|kvaak}}
 * French: {{t+|fr|coin-coin}}
+* Georgian: {{t|ka|ყიყინი}}
 * German: {{t|de|Quaken|n}}
 * Greek: {{t|el|πα πα}} (pa pa)
 * Hungarian: {{t|hu|háp}}, {{t|hu|hápogás}}
@@ -73,6 +74,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Dutch: {{t+|nl|kwaken}}
 * Finnish: {{t+|fi|vaakkua}}
 * French: {{t+|fr|cancaner}}
+* Georgian: {{t|ka|ყიყინი}}
 * German: {{t+|de|quaken}}
 * Hungarian: {{t+|hu|hápog}}
 * Icelandic: {{t|is|gagga}}, {{t|is|gussa}}
