t+ka:[[შარლატანი]] t+ka:[[თაღლითი]] ([[WT:EDIT|Assisted]]) <quack#52246135>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -166,6 +166,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Finnish: {{t+|fi|huijari}}
 * French: {{t+|fr|charlatan|m}}, {{t+|fr|charlatane|f}}
 * Galician: {{t|gl|charlatán|m}}
+* Georgian: {{t|ka|შარლატანი}}, {{t|ka|თაღლითი}}
 * German: {{t+|de|Quacksalber|m}}, {{t+|de|Quacksalberin|f}}
 * Greek: {{t+|el|τσαρλατάνος|m}} (tsarlatános)
 * Icelandic: {{t+|is|fúskari|m}}, {{t+|is|loddari|m}}, {{t|is|falsari|m}}, {{t|is|svikari|m}}
