/* Noun */ # The bottom part of a [[mobile phone]], below the [[screen]]. <chin#52253727>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -18,6 +18,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 # {{lb|en|slang|US}} [[talk|Talk]].
 # {{lb|en|slang|British}} A [[lie]], a [[falsehood]].
 # {{lb|en|boxing|uncountable}} The [[ability]] to [[withstand]] being [[punch]]ed in the [[#chin|chin]] without being [[knock out|knocked out]].
+# The bottom part of a [[mobile phone]], below the [[screen]].
 
 =====Synonyms=====
 * {{sense|central area of the jaw, below the mouth}} {{l|en|mentum}} {{qualifier|anatomy}}
