--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -61,7 +61,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 #*: The ''goðar'' seem both to have received payment of ''thing-fararkaup'' from those who stayed home and at the same time compensated those who went to the '''thing''', and it cannot be seen whether they had any profit from these transactions.
 #* '''1988''', Jesse L. Byock, ''Medieval Iceland: Society, Sagas, and Power'', page 59:
 #*: All Icelandic '''things''' were ''skap-thing'', meaning that they were governed by established procedure and met at regular legally designated intevals at predetermined meeting places.
-
+# {{lb|en|informal}} A {{romantic}} relationship
 ====Synonyms====
 * {{sense|referent that can be used to refer to any entity}} {{l|en|item}}, {{l|en|stuff}} (''[[uncountable]] equivalent''), {{l|en|yoke}} (''Ireland'')
 * {{sense|penis}} see [[Thesaurus:penis]]
