--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -36,6 +36,8 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 * Afrikaans: {{t|af|eekhorinkie}}
 * Albanian: {{t+|sq|ketër|m}}
 * Algonquin: {{t|alq|adjidamò}}
+* Apache:
+*: Western Apache: {{t|apw|na'iłtsóh}}
 * Arabic: {{t|ar|سِنْجَاب|m}}
 *: Hijazi: {{t|acw|سنجاب|m|tr=sinjāb|sc=Arab}}
 * Aragonese: {{t|an|esquirgüelo|m}}
