--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -43,7 +43,7 @@ From {{m|la|multus||much, many}} + {{m|la|color||color}}.
 # {{lb|la|substantive}} A multicolored [[garment]].
 
 ====Inflection====
-{{la-decl-3rd-1E|multicolōr|multicolōr}}
+{{la-decl-3rd-1E|multicolor|multicolōr}}
 
 ====Synonyms====
 * {{sense|multicolored}} {{l|la|multicolorus|multicolōrus}}
