--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -41,6 +41,7 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 * Russian: {{t+|ru|гене́тта|f}}, {{t|ru|гене́та|f}}
 * Spanish: {{t+|es|jineta|f}}, {{t+|es|gineta|f}}
 * Swahili: {{t|sw|kanu}}
+* Swedish: {{t|sv|genett|c}}
 * Wolof: {{t|wo|yoolaan}}
 {{trans-bottom}}
 
