--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -74,6 +74,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Azerbaijani: {{t+|az|ada}}
 * Baba Malay: {{t|mbf|pulo}}
 * Baekje: {{t|pkc|斯麻|tr=sama}}
+* Balinese: {{t|ban|pulo}}, {{t|ban|nusa}}
 * Bashkir: {{t|ba|утрау}}
 * Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
 * Bats: {{t|bbl|გუბ}}
