/* Translations */ de <tubular bells#52314747>

--- a/en/t/tubular bells.855148.wikitext
+++ b/en/t/tubular bells.855148.wikitext
@@ -11,6 +11,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|管鐘|sc=Hani}}, {{t|cmn|管钟|tr=guǎnzhōng|sc=Hani}}
 * Finnish: {{t+|fi|putkikellot|p}}
+* German: {{t+|de|Röhrenglocken|p-f}}
 {{trans-mid}}
 * Hungarian: {{t|hu|csőharang}}
 * Russian: {{t-needed|ru}}
