/* English */ Removed line space in etymology and added detail to pronunciation. <weasel#52316501>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -6,14 +6,14 @@
 * {{l|en|weazel}} {{qual|archaic}}
 
 ===Etymology===
-From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*wisulǭ}}.
-
-The verb comes from the supposed [[cunningness]] of the weasel.
+From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*wisulǭ}}. The verb comes from the supposed [[cunningness]] of the weasel.
 
 ===Pronunciation===
-* {{IPA|/ˈwiːzəl/|lang=en}}
+* {{a|RP}} {{IPA|/ˈwiːz(ə)l/|lang=en}}
+* {{a|GA}} {{enPR|wēʹzəl|wēzʹl}} {{IPA|/ˈwizəl/|/ˈwizl̩/|lang=en}}
 * {{audio|en-us-weasel.ogg|Audio (US)|lang=en}}
 * {{rhymes|iːzəl|lang=en}}
+* {{hyph|wea|sel|lang=en}}
 
 ===Noun===
 {{en-noun}}
