--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -10,7 +10,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/ˈwiːz(ə)l/|lang=en}}
-* {{a|GA}} {{enPR|wēʹzəl|wēzʹl}} {{IPA|/ˈwizəl/|/ˈwizl̩/|lang=en}}
+* {{a|GA}} {{enPR|wēʹzəl|wēzʹl}}, {{IPA|/ˈwizəl/|/ˈwizl̩/|lang=en}}
 * {{audio|en-us-weasel.ogg|Audio (US)|lang=en}}
 * {{rhymes|iːzəl|lang=en}}
 * {{hyph|wea|sel|lang=en}}
