--- a/en/b/bethinking.855681.wikitext
+++ b/en/b/bethinking.855681.wikitext
@@ -7,6 +7,7 @@ From {{inh|en|enm|bithenking}}, {{m|enm|bithenkyng}}, {{m|enm|bithenkynge}}, {{m
 {{en-noun|~}}
 
 # The act of [[thinking]], [[think about|thinking about]], [[considering]], [[reflecting]], or [[remembering]].
+#* {{quote-text|lang=en|year=2013|author=Richard Polt|title=The Emergency of Being|passage=I propose that we can approach '''bethinking''' as ''the event of thinking the event''.}}
 
 ===Etymology 2===
 From {{inh|en|enm|bythenkynge}}, from {{inh|en|ang|*beþenċende}} (compare {{cog|ang|embeþenċende}}, {{m|ang|ymbeþenċende}}), equivalent to {{af|en|bethink|-ing}}.
