t+ru:[[свистун]] t-balance t+ru:[[свистунья]] t+ru:[[свисток]] ([[WT:EDIT|Assisted]]) <whistler#52319468>

--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -25,8 +25,9 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 {{trans-top|someone or something that whistles}}
 * Finnish: {{t+|fi|viheltäjä}} {{q|man or animal}}, {{t|fi|vihellin}} {{q|device}}
 * French: {{t+|fr|siffleur}}
-{{trans-mid}}
 * Italian: {{t|it|fischiatore|m}}
+{{trans-mid}}
+* Russian: {{t+|ru|свисту́н|m}}, {{t+|ru|свисту́нья|f}}, {{t+|ru|свисто́к|m}} {{qualifier|device}}
 * Spanish: {{t|es|silbador|m}}
 {{trans-bottom}}
 
