Undo revision 34250251 by [[Special:Contributions/31.200.19.97|31.200.19.97]] ([[User talk:31.200.19.97|talk]]) Restoring obsolete term – since it is marked as such at its own page, it's okay <island#52323303>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -295,7 +295,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Tongan: {{t|to|motu}}
 * Torres Strait Creole: {{t|tcs|ailan}}
 * Tuamotuan: {{t|pmt|motu}}
-* Turkish: {{t+|tr|ada}}, {{t+|tr|aral}}
+* Turkish: {{t+|tr|ada}}, {{t+|tr|aral}}, {{t+|tr|cezire}}
 * Turkmen: {{t+|tk|ada}}
 * Tuvan: {{t|tyv|ортулук}}
 * Ukrainian: {{t+|uk|о́стрів|m}}
