--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -3,12 +3,9 @@
 
 ===Proper noun===
 {{en-proper noun}}
-# {{lb|en|biblical}} The twelfth book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[2 Samuel]] or [[4 Kings]].
 
-====Related terms====
-* {{l|en|Kgs}}
-* {{l|en|2 Kgs}}
-* {{l|en|4 Kgs}}
+# {{lb|en|biblical}} The twelfth book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]].
+#: {{syn|en|2 Samuel|4 Kings|2 Kgs|q3=abbreviation}}
 
 ====Translations====
 {{trans-top|book of the Bible}}
