--- a/en/2/2 Maccabees.801821.wikitext
+++ b/en/2/2 Maccabees.801821.wikitext
@@ -5,8 +5,6 @@
 {{en-proper noun}}
 
 # A book of the [[Catholic]] and [[Eastern Orthodox]] canon of the [[Old Testament]], considered [[apocryphal]] by [[Protestants]].
-
-====Related terms====
-* {{l|en|2 Macc.}}
+#: {{syn|en|2 Macc.|q1=abbreviation}}
 
 [[Category:English terms spelled with 2]]
