--- a/en/3/3 Kings.801715.wikitext
+++ b/en/3/3 Kings.801715.wikitext
@@ -3,12 +3,9 @@
 
 ===Proper noun===
 {{en-proper noun}}
-# {{lb|en|biblical}} A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[1 Kings]].
 
-====Related terms====
-* {{l|en|Kgs}}
-* {{l|en|1 Kgs}}
-* {{l|en|3 Kgs}}
+# {{lb|en|biblical}} A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]].
+#: {{syn|en|1 Kings|3 Kgs|q1=abbreviation}}
 
 ====Translations====
 {{trans-top|book of the Bible}}
