--- a/en/4/4 Kings.801718.wikitext
+++ b/en/4/4 Kings.801718.wikitext
@@ -3,12 +3,9 @@
 
 ===Proper noun===
 {{en-proper noun}}
-# {{lb|en|biblical}} A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[2 Kings]].
 
-====Related terms====
-* {{l|en|Kgs}}
-* {{l|en|2 Kgs}}
-* {{l|en|4 Kgs}}
+# {{lb|en|biblical}} A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]].
+#: {{syn|en|2 Kings|4 Kgs|q2=abbreviation}}
 
 ====Translations====
 {{trans-top|book of the Bible}}
