--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -347,7 +347,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 {{trans-top|add weight}}
 * Finnish: {{t|fi|[[lisätä]] [[paino|painoa]]}}
 * French: {{t+|fr|alourdir}}, {{t+|fr|lester}}, {{t+|fr|appesantir}}
-* German: {{t+|de|beschweren}}
+* German: {{t+|de|beschweren}}, {{t+|de|gewichten}}
 {{trans-mid}}
 * Italian: {{t|it|appesantire}}
 * Romanian: {{t+|ro|îngreuna}}
