--- a/en/m/Maccabees.801819.wikitext
+++ b/en/m/Maccabees.801819.wikitext
@@ -3,24 +3,27 @@
 ==English==
 {{book of the Bible|Books of the Maccabees}}
 
-===Noun===
-{{head|en|noun plural form}}
-
-# {{plural of|Maccabee|lang=en}}
-
 ===Proper noun===
 {{en-proper noun}}
-# {{lb|en|biblical}} A books of the [[Old Testament]].
+
+# {{lb|en|biblical}} One of two apocryphal books of the [[Old Testament]].
+#: {{syn|en|Macc.|q1=abbreviation}}
 # {{lb|en|history}} A Jewish [[liberation]] movement who fought for, and established, independence in the [[Land of Israel]] during the second and first centuries BC.
 
-====Related terms====
-* {{l|en|Macc.}}
+====Derived terms====
+* {{l|en|1 Maccabees}}
+* {{l|en|2 Maccabees}}
 
 ====Translations====
-{{trans-top}}
+{{trans-top|book of the Old Testament}}
 * French: {{t+|fr|Maccabées}}
 * Irish: {{t|ga|Macabaeigh|m-p}}
 {{trans-mid}}
 * Korean: {{t|ko|마카베오기}}
 * Portuguese: {{t|pt|Macabeus|m|m-p}}
 {{trans-bottom}}
+
+===Noun===
+{{head|en|noun plural form}}
+
+# {{plural of|Maccabee|lang=en}}
