--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -9,6 +9,7 @@
 
 ====Translations====
 {{trans-top|book of the Bible}}
+* Catalan: {{t|ca|1 Samuel}}
 * Chinese:
 *: Cantonese: {{t|yue|撒母耳記上|sc=Hani}}, {{t|yue|撒母耳记上|tr=saat3 mou5 ji5 gei3 soeng6|sc=Hani}}, {{t|yue|撒慕爾紀上|sc=Hani}}, {{t|yue|撒慕尔纪上|tr=saat3 mou6 ji5 gei2 soeng6|sc=Hani}} {{qualifier|Catholic}}
 *: Hakka: {{t|hak|撒母耳記上|sc=Hani}}, {{t|hak|撒母耳记上|tr=Sat-mû-ngí-ki-song|sc=Hani}}
@@ -25,7 +26,19 @@
 * Thai: {{t|th|๑ ซามูเอล}}
 {{trans-bottom}}
 
+===See also===
+* {{l|en|2 Samuel}}
+
 [[Category:English terms spelled with 1]]
+
+----
+
+==Catalan==
+
+===Proper noun===
+{{ca-proper noun}}
+
+# {{lb|ca|book of the bible}} {{l|en|1 Samuel}} {{gloss|book of the Bible}}
 
 ----
 
@@ -45,6 +58,4 @@
 ===Proper noun===
 {{es-proper noun|m}}
 
-# {{lb|es|bible}} {{l|en|1 Samuel}} {{gloss|the book of the Bible}}
-
-[[Category:es:Books of the Bible]]
+# {{lb|es|book of the bible}} {{l|en|1 Samuel}} {{gloss|book of the Bible}}
