--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -10,6 +10,7 @@
 ====Translations====
 {{trans-top|book of the Bible}}
 * Afrikaans: {{t|af|2 Konings}}, {{t|af|II Konings}}
+* Catalan: {{t|ca|2 Reis}}
 * Chinese:
 *: Cantonese: {{t|yue|列王紀下|sc=Hani}}, {{t|yue|列王纪下|tr=lit6 wong4 gei2 haa6|sc=Hani}}
 *: Hakka: {{t|hak|列王紀下|sc=Hani}}, {{t|hak|列王纪下|tr=Lie̍t-vòng-ki Ha|sc=Hani}}
