move Old Persian transliteration to |tr= parameter <leather#52337660>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -94,7 +94,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|кожа|f|sc=Cyrs}}
 * Old English: {{t|ang|leþer|n}}
-* Old Persian: {{t|peo|čarman-|sc=Xpeo}}
+* Old Persian: {{t|peo|tr=čarman-}}
 * Pashto: {{t|ps|چرم|m|tr=čarm}}, {{t|ps|سختیان|m|tr=saxtyãn}}, {{t|ps|وژن|m|tr=wẑǝn}}
 * Persian: {{t+|fa|چرم|tr=čarm}}
 * Polish: {{t+|pl|skóra|f}}
