--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -226,7 +226,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Southern Altai: {{t|alt|ээк|sc=Cyrl}}
 * Spanish: {{t+|es|barbilla|f}}, {{t+|es|mentón|m}}, {{t+|es|pera|f}}
 * Sranan Tongo: {{t|srn|kowru}}
-* Sumerian: {{t|sux|te}}, {{t|sux|de4}}, {{t|sux|sun4}}, {{t|sux|sum4}}, {{t|sux|sùl}}, {{t|sux|su6}}
+* Sumerian: {{t|sux|ts=te}}, {{t|sux|ts=de4}}, {{t|sux|ts=sun4}}, {{t|sux|ts=sum4}}, {{t|sux|ts=sùl}}, {{t|sux|ts=su6}}
 * Sundanese: {{t+|su|angkeut}}
 * Swahili: {{t|sw|tawa}}, {{t+|sw|kidevu}}
 * Swedish: {{t+|sv|haka|c}}
