--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -41,7 +41,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 
 ====Derived terms====
 {{der3|en|coney island|desert island|floating island|Grand Island|heat island|high island|interisland|Island County
-|islander|island dispenser|island display|island-hop|island platform|island position|island state|island universe|islandwide|islandy|Kangaroo Island|Long Island|low island|no man is an island|Norfolk Island
+|islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island|Long Island|low island|no man is an island|Norfolk Island
 |Puget Island|Rock Island
 |safety island|security island|Island|the Island|sea-island|tidal island
 |traffic island}}
