Reverted edits by [[Special:Contributions/Viktorija J|Viktorija J]]. If you think this rollback is in error, please leave a message on my talk page. <yeah#52354921>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -42,7 +42,7 @@ Colloquial/dialectal form of {{m|en|yea}} or {{m|en|yes}}.
 * Italian: {{t+|it|sì}}, {{t+|it|già}}
 * Japanese: {{t+|ja|うん|tr=un}}, {{t+|ja|そう|tr=sō}}, {{t+|ja|ええ|tr=ē}}, {{t+|ja|ああ|tr=ā}}
 * Korean: {{t+|ko|응}}, {{t+|ko|네}}, {{t+|ko|예}}, {{t+|ko|응}}, {{t+|ko|어}}
-* Lithuanian: {{t+|lt|aha}}
+* Lithuanian: {{t+|lt|taip}}
 * Navajo: {{t|nv|wehee}}
 {{trans-mid}}
 * Norwegian: {{t+|no|ja}}, {{t|no|yeah}}
