--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -50,7 +50,7 @@ The word is sometimes considered to come from an {{cog|xno|-}} derivative of {{c
 * Italian: {{t+|it|ghiro|m}}, {{t+|it|moscardino|m}}
 * Japanese: {{t|ja|ヤマネ|tr=yamane}}
 * Ladin: {{t|lld|ghiro|m}}
-* Latin: {{t|la|glis|m}}
+* Latin: {{t|la|glis|m}}, {{t|la|nitedula|f}}
 {{trans-mid}}
 * Latvian: {{t|lv|susuris}}
 * Lithuanian: {{t|lt|miegapelė}}
