--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -9,7 +9,7 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 * {{a|RP|Aus|UK}} {{IPA|/ˈskwɪɹl̩/|/ˈskwɪɹəl/|lang=en}}
 * {{a|Canada|US}} {{IPA|/ˈskwɝl/|/ˈskwɝl̩/|/ˈskwɝəl/|lang=en}}
 * {{a|New England|very dated}} {{IPA|/ˈskwɪɹəl/|lang=en}}
-* {{audio|En-ca-squirrel.ogg|Audio (CA)|lang=en}}
+* {{audio|En-ca-squirrel.ogg|Audio (Canada)|lang=en}}
 * {{rhymes|ɜː(ɹ)l|ɪɹəl|lang=en}}
 
 ===Noun===
