t+id:[[sesuatu]] t+id:[[benda]] t+id:[[masalah]] t+id:[[makhluk]] t+id:[[hal]] ([[WT:EDIT|Assisted]]) <thing#52371461>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -234,6 +234,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-bottom}}
 
 {{trans-top|word, symbol, sign, or other referent that can be used to refer to any entity}}
+* Indonesian: {{t+|id|sesuatu}}
 * Polish: {{t+|pl|coś|n}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -243,6 +244,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Cebuano: {{t|ceb|butang}}
 {{trans-mid}}
 * Finnish: {{t+|fi|esine}}
+* Indonesian: {{t+|id|benda}}
 * Latin: {{t+|la|res|f}}
 {{trans-bottom}}
 
@@ -277,6 +279,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-top|problem, dilemma, or complicating factor}}
 * Finnish: {{t+|fi|pulma}}
 {{trans-mid}}
+* Indonesian: {{t+|id|masalah}}
 {{trans-bottom}}
 
 {{trans-top|penis}}
@@ -293,6 +296,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Greek: {{t+|el|πλάσμα|n}}
 * Hungarian: {{t+|hu|teremtés}}, {{t+|hu|lény}}
 {{trans-mid}}
+* Indonesian: {{t+|id|makhluk}}
 * Japanese: {{t+|ja|生き物|tr=ikimono|sc=Jpan}}
 * Turkish: {{t+|tr|mahluk}}
 {{trans-bottom}}
@@ -303,12 +307,14 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Finnish: {{t+|fi|olennainen}} {{qualifier|adjective}}
 {{trans-mid}}
 * German: {{t+|de|Sache|f}}
+* Indonesian: {{t+|id|hal}}
 * Turkish: {{t|tr|işin aslı}}, {{t+|tr|olay}}
 {{trans-bottom}}
 
 {{trans-top|situation surrounding a noun's referent}}
 * Finnish: {{t+|fi|juttu}}
 {{trans-mid}}
+* Indonesian: {{t+|id|hal}}
 {{trans-bottom}}
 
 {{trans-top|historical: public assembly or judicial council}}
