--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -87,16 +87,16 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 ===Noun===
 {{en-noun}}
 
-# A solemn promise to do something.
-# Something given by a person who is borrowing money etc to the person he has borrowed it from, to be kept until the money etc is returned.
+# A [[solemn]] [[promise]] to do something.
+## {{lb|en|with {{l|en|the}}}} A promise to [[abstain]] from [[drinking]] [[alcohol]].
+# A [[security]] to [[guarantee]] [[payment]] of a [[debt]].
+## Something given by a person who is borrowing money etc to the person he has borrowed it from, to be kept until the money etc is returned.
 # A person who has taken a pledge of allegiance to a college [[fraternity]], but is not yet formally approved.
-# A security to [[guarantee]] [[payment]] of a [[debt]].
 # A [[drinking]] [[toast]].
-# {{lb|en|with {{l|en|the}}}} A promise to [[abstain]] from [[drinking]] [[alcohol]].
 
 ====Synonyms====
-* {{l|en|promise}}
-* {{l|en|commitment}}
+* {{sense|promise}} {{l|en|commitment}}
+* {{sense|security to guarantee payment}} {{l|en|collateral}}
 
 ====Derived terms====
 * {{l|en|antipledge}}, {{l|en|antipledging}}
