--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -6,11 +6,11 @@
 ===Noun===
 {{en-noun}}
 
-# one who [[bail]]s or [[lade]]s.
+# one who [[bail]]s or [[lade]]s.=Okay okay okau oay
 # a [[utensil]], as a [[bucket]] or [[cup]], used in [[bailing]]; a machine for bailing water out of a pit.
-#* '''1938''', [[w:Xavier Herbert|Xavier Herbert]], ''[[w:Capricornia (novel)|Capricornia]]'', New York: D. Appleton-Century, 1943, Chapter IV, p. 50, [https://archive.org/details/capricornianovel00herb]
-#*: {{...}} he had them help him fashion a mast from the sweep and attach wire stays to it and tear the jib to the shape he desired and make a '''bailer''' from canvas and wire and bent wood.
-#* {{quote-text|lang=en|year=1941|author={{w|Emily Carr}}|title={{w|Klee Wyck}}|chapter=10|url=http://www.gutenberg.net.au/ebooks01/0100131h.html|passage=Two bits was the top price that old Jenny knew. She asked two bits for everything she had to sell, were it canoe-'''bailer''', eagle's wing, cedar-bark basket or woven mat.}}
+#* '''1938''', [[w:Xavier Herbert|Xa=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oayvier Herbert]], ''[[w:Capricornia (novel)|Capricornia]]'', New York: D. Appleton-Century, 1943, Chapter IV, p. 50, [https://archive.org/details/capricornianovel00herb]
+#*: {{...}} he =Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oayhad them help him fash=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oayion a mast from the sweep and attach wire stays to it and tear the jib to the shape he desired and make a '''bailer''' from canvas and wire and bent wood.
+#* {{quote-text|lang=en|year=1941|au=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oaythor={{w|Emily Carr}}|title={{w|Klee Wyck}}|chapter=10|url=http://www.gutenberg.net.au/ebooks01/0100131h.html|passage=Two bits was the top price that old Jenny knew. She asked two bits for everything she ha=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oay=Okay okay okau oayd to sell, were it canoe-'''bailer''', eagle's wing, cedar-bark basket or woven mat.}}
 # {{lb|en|legal}} {{alternative form of|bailor|lang=en}}
 
 ====Translations====
