--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -89,7 +89,7 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. Origin unknown, possibl
 * Spanish: {{t|es|turón|m}}
 * Swedish: {{t+|sv|iller}}
 * Turkish: {{t+|tr|kokarca}}
-* Ukrainian: {{t|uk|тхiр лiсови́й|m}}, {{t|uk|тхiр чо́рний|m}}
+* Ukrainian: {{t|uk|тхір лісови́й|m}}, {{t|uk|тхір чо́рний|m}}
 * Vietnamese: {{t+|vi|triết}}
 * Walloon: {{t+|wa|vexhåd}}, {{t+|wa|vexhoes|m}}
 * Welsh: {{t|cy|ffwlbart}}
