--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -18,7 +18,7 @@ From {{prefix|en|anarcho|capitalism}}. Coined by {{w|Murray Rothbard}} in the mi
 ====Translations====
 {{trans-top|philosophy that advocates the elimination of the state and a self-regulating free market}}
 * Arabic: {{t|ar|لاسلطوية رأسمالية}}
-* Bulgarian: {{t|bg|aнархокапитализъм|sc=Cyrl}}
+* Bulgarian: {{t|bg|анархокапитализъм|sc=Cyrl}}
 * Catalan: {{t|ca|anarcocapitalisme}}
 * Chinese:
 *: Mandarin: {{t|cmn|無政府資本主義}}
@@ -41,7 +41,7 @@ From {{prefix|en|anarcho|capitalism}}. Coined by {{w|Murray Rothbard}} in the mi
 * Korean: {{t|ko|아나코 자본주의|sc=Kore}}
 * Latvian: {{t|lv|anarhokapitālisms}}
 * Lithuanian: {{t|lt|anarchokapitalizmas}}
-* Macedonian: {{t|mk|aнархокапитализам|sc=Cyrl}}
+* Macedonian: {{t|mk|анархокапитализам|sc=Cyrl}}
 * Norwegian: {{t|no|anarkokapitalisme}}
 * Persian: {{t|fa|آنارکو-کاپیتالیسم|sc=fa-Arab}}
 * Polish: {{t|pl|anarchokapitalizm}}
