--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -47,7 +47,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Bulgarian: {{t+|bg|я́зовец|m}}
 * Burmese: {{t+|my|ခွေးတူဝက်တူ}}
 * Catalan: {{t|ca|teixó|m}}
-* Chechen: {{t|ce|дIама}}
+* Chechen: {{t|ce|дӏама}}
 * Cherokee: {{t|chr|ᎢᏃᎵ}}
 * Chinese:
 *: Mandarin: {{t+|cmn|獾|tr=huān}}
