/* West Frisian */ <at#52380615>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1064,7 +1064,7 @@ This preposition causes the [[soft mutation]].
 ==West Frisian==
 
 ===Pronunciation===
-* {{IPA|lang=fy|/ɔt/}}
+* {{IPA|fy|/ɔt/}}
 
 ===Conjunction===
 {{head|fy|conjunction}}
