--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -13,7 +13,7 @@
 {{head|en|numeral}}
 
 # {{lb|en|US|modern|_|British|_|&|_|Australian|[[w:Long and short scales|short scale]]}} A [[thousand]] [[trillion]] [[trillion]], a [[billion]] [[billion]] [[billion]]: 1 followed by 27 zeros, 10<sup>27</sup>.
-# {{lb|en|dated|_|British|_|&|_|Australian|[[w:Long and short scales|long scale]]}} A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
+# {{lb|en|dated|_|British|_|&|_|Australian|[[w:Long and shor scales|long scale]]}} A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
 ====Synonyms====
 * 10<sup>48</sup>: a [[w:Long and short scales|short scale]] [[quindecillion]]
