--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -3,7 +3,7 @@
 ===Etymology===
 {{confix|en|oct|gloss1=eight|illion}}
 
-===Pronunciation===
+===Prnunciation===
 * {{a|UK}} {{IPA|/ɒkˈtɪl.iː.ən/|lang=en}}
 * {{audio|en-au-octillion.ogg|Audio (AU)|lang=en}}
 * {{rhymes|ɪljən|lang=en}}
