--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -415,7 +415,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 ==Azerbaijani==
 
 ===Etymology===
-From {{der|az|trk-pro|*at|t=horse}}.
+From {{inh|az|trk-pro|*at|t=horse}}.
 
 ===Noun===
 {{az-variant|c=ат|r=at|a=آت}}
