--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -95,6 +95,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Chichewa: {{t|ny|chilumba}}
 * Chinese:
 *: Cantonese: {{t|yue|島}}, {{t|yue|岛|tr=dou2|sc=Hani}}
+*: Dungan: {{t|dng|до}}, {{t|dng|хэдо}}
 *: Hakka: {{t|hak|島|sc=Hani}}, {{t|hak|岛|tr=táu|sc=Hani}}
 *: Mandarin: {{t+|cmn|島|sc=Hani}}, {{t+|cmn|岛|tr=dǎo|sc=Hani}}, {{t+|cmn|島嶼|sc=Hani}}, {{t+|cmn|岛屿|tr=dǎoyǔ|sc=Hani}}
 *: Min Dong: {{t|cdo|島|sc=Hani}}, {{t|cdo|岛|tr=dō̤|sc=Hani}}
@@ -142,7 +143,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Hausa: {{t|ha|tsibiri}}
 * Hawaiian: {{t|haw|moku}}
 * Hebrew: {{t+|he|אִי|m|tr=i}}
-* Hindi: {{t+|hi|द्वीप|m|sc=Deva}}, {{t+|hi|टापू|m|sc=Deva}}
+* Hindi: {{t+|hi|द्वीप|m|sc=Deva}}, {{t+|hi|टापू|m|sc=Deva}}, {{t|hi|जज़ीरा|m}} {{qualifier|poetic}}
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: {{t+|is|ey|f}}, {{t+|is|eyja}}, {{t|is|eyland|n}}
 * Ido: {{t+|io|insulo}}
@@ -185,10 +186,10 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Livonian: {{t|liv|sǭr}}
 * Livvi: {{t|olo|suari}}
 * Lombard: {{t|lmo|isula|f}}
+{{trans-mid}}
 * Low German: {{t|nds|Insel|f}}, {{t|nds|Ailand|n}}
 *: Dutch Low Saxon: {{t+|nds-nl|eilaand|n}}
 * Ludian: {{t|lud|suar'}}
-{{trans-mid}}
 * Luganda: {{t|lg|ekizinga}}
 * Luxembourgish: {{t|lb|Insel|f}}
 * Macedonian: {{t|mk|остров|m}}
