--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -117,7 +117,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Hebrew: {{t+|he|אַרְנָב|m|tr=arnáv}}, {{t+|he|אַרְנֶבֶת|f|tr=arnévet}}
 * Hindi: {{t|hi|ख़रगोश|m|sc=Deva}}, {{t+|hi|शशक|m|sc=Deva}}, {{t|hi|सुस्सा|tr=sussā|sc=Deva}}, {{t+|hi|खरहा|tr=kharhā|sc=Deva}}
 * Hopi: {{t|hop|taavo}}
-* Hungarian: {{t|hu|hazinyúl}}
+* Hungarian: {{t|hu|nyúl}}
 * Icelandic: {{t+|is|kanína}}
 * Ido: {{t+|io|kuniklo}}
 * Indonesian: {{t+|id|kelinci}}
