--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -269,6 +269,7 @@ Likely a shift from ''tsuku'' (see below), derived through a fusion with ancient
 * {{ja-r|望月|もちづき}}
 * {{ja-r|夕月|ゆうづき}}
 {{der-bottom}}
+{{ja-number-counter:月(つき)}}
 
 =====Idioms=====
 * {{ja-r|月よ星よ|つき よ ほし よ}}
