--- a/en/b/betted.6796.wikitext
+++ b/en/b/betted.6796.wikitext
@@ -4,7 +4,7 @@
 * {{IPA|/ˈbɛtəd/|lang=en}}
 
 ===Verb===
-{{head|en|verb form|cat2=past participles}}
+{{head|en|verb form}}
 
 # {{lb|en|archaic}} {{en-simple past of|bet}}
 # {{lb|en|archaic}} {{inflection of|bet||past|part|lang=en}}
