t+cmn:[[{{t-needed}}]] t+de:[[{{t-needed}}]] t+ja:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <polecat#52492524>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -27,9 +27,13 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. Origin unknown, possibl
 
 ====Translations====
 {{trans-top|weasel of the genus ''Mustela''}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Finnish: {{t+|fi|kärppä}}
 {{trans-mid}}
 * Georgian: {{t|ka|ქრცვინი}}
+* German: {{t-needed|de}}
+* Japanese: {{t-needed|ja}}
 {{trans-bottom}}
 
 {{trans-top|''Mustela putorius''}}
