--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -173,6 +173,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Norwegian: {{t+|no|kanin|m}}
 * O'odham: {{t|ood|tohbi}}
 * Occitan: {{t+|oc|conilh|m}}, {{t|oc|lapin|m}}
+* Old English: {{t|ang|hara|m}}
 * Oroqen: {{t|orh|tʊkʃakɪ}}
 * Ossetian: {{t-needed|os}}
 * Pashto: {{t|ps|سوۍ|tr=saway|sc=ps-Arab}}
