--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -15,6 +15,7 @@
 * Czech: {{t|cs|Ruská sovětská federativní socialistická republika|f}}
 * Danish: {{t|da|Russiske Socialistiske Føderative Sovjetrepublik|c}}
 * Finnish: {{t|fi|Venäjän Sosialistinen Federatiivinen Neuvostotasavalta}}
+* French: {{t|fr|République socialiste fédérative soviétique de Russie|f}}
 * Galician: {{t|gl|República Socialista Federativa Soviética Rusa|f}}
 {{trans-mid}}
 * Georgian: {{t|ka|რუსეთის საბჭოთა ფედერაციული სოციალისტური რესპუბლიკა}}
