--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -9,7 +9,7 @@
 ===Pronunciation===
 * {{IPA|/əˈɡɛn/|/əˈɡeɪn/|lang=en}}
 * {{audio|En-uk-again.ogg|Audio (UK)|lang=en}}
-* {{audio|en-us-again.ogg|Audio (US)|lang=en}}
+* {{audio|en-us-again.ogg|Audio (US, California)|lang=en}}
 * {{a|regional US}} {{IPA|/əˈɡɪn/|lang=en}}<ref>{{R:PEAS|131}}</ref>
 * {{audio|LL-Q1860 (eng)-Nattes à chat-again.wav|Audio|lang=en}}
 * {{rhymes|eɪn|ɛn|lang=en}}
