/* Translations */ Added Ancient Greek translation of this word. <bend#52518860>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -299,6 +299,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * French: {{t+|fr|virage|m}}
 * German: {{t+|de|Kurve|f}}, {{t+|de|Biegung|f}}
 * Greek: {{t+|el|στροφή|f}}
+*: Ancient: {{t|grc|καμπή|f}}
 * Italian: {{t+|it|curva|f}}
 * Latin: {{t|la|curvāmen|n}}, {{t|la|flexus|m}}
 * Lithuanian: {{t|lt|vingis|m}}
