t+be:[[чатырохвугольнік]] t+uk:[[чотирикутник]] t-balance t+bg:[[четириъгълник]] t+sk:[[štvoruholník]] t+mk:[[четириаголник]] ([[WT:EDIT|Assisted]]) <quadrilateral#52529809>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -27,8 +27,9 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 {{trans-top|polygon having four sides}}
 * Arabic: {{t|ar|رباعي الأضلاع}}
 * Armenian: {{t+|hy|քառանիստ}}
-* Belarusian: {{t-needed|be}}
+* Belarusian: {{t|be|чатырохвуго́льнік|m}}
 * Bengali: {{t|bn|চতুর্ভুজ}}
+* Bulgarian: {{t|bg|четириъгъ̀лник|m}}
 * Burmese: {{t+|my|စတုဂံ}}, {{t+|my|လေးထောင့်}}
 * Catalan: {{t|ca|quadrilàter|m}}
 * Chinese:
@@ -48,9 +49,10 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Icelandic: {{t|is|ferhliðungur|m}}, {{t|is|fjórhliðungur|m}}
 * Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
 * Japanese: {{t+|ja|四辺形|tr=しへんけい, shihenkei|sc=Jpan}}, {{t+|ja|四角形|tr=しかっけい, shikakkei|sc=Jpan}}
-{{trans-mid}}
 * Khmer: {{t+|km|ចតុកោណ}}
+{{trans-mid}}
 * Lao: {{t+|lo|ຮູບສີ່ແຈ}}
+* Macedonian: {{t|mk|четириаголник|m}}
 * Malay: {{t|ms|segi empat}}, {{t|ms|caturkona}}, {{t|ms|tetragon}}
 * Maori: {{t|mi|tapawhā}}
 * Norwegian:
@@ -62,6 +64,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Romanian: {{t+|ro|patrulater}}, {{t|ro|cadrilater}}
 * Russian: {{t+|ru|четырёхуго́льник|m|tr=četyrjoxugólʹnik}}
 * Serbo-Croatian: {{t|sh|četverougao}}
+* Slovak: {{t|sk|štvoruholník|m}}
 * Spanish: {{t+|es|cuadrilátero|m}}
 * Swahili: {{t|sw|pembenne}}
 * Swedish: {{t+|sv|fyrhörning|c}}
@@ -70,6 +73,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Telugu: {{t+|te|చతుర్భుజి}}
 * Thai: {{t+|th|สี่เหลี่ยม}}
 * Turkish: {{t+|tr|dörtgen}}
+* Ukrainian: {{t|uk|чотирику́тник|m}}
 * Zazaki: {{t|zza|çehardag}}, {{t|zza|çardag}}
 {{trans-bottom}}
 
