--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -50,6 +50,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
 * Japanese: {{t+|ja|四辺形|tr=しへんけい, shihenkei|sc=Jpan}}, {{t+|ja|四角形|tr=しかっけい, shikakkei|sc=Jpan}}
 * Khmer: {{t+|km|ចតុកោណ}}
+* Korean: {{t+|ko|사각형}}
 {{trans-mid}}
 * Lao: {{t+|lo|ຮູບສີ່ແຈ}}
 * Macedonian: {{t|mk|четириаголник|m}}
