--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -17,6 +17,7 @@
 *: Mandarin: {{t|cmn|在耐心的极限|tr=zài nàixīn de jíxiàn}}
 * French: {{t+|fr|au bout du rouleau}}, {{t+|fr|exaspéré}}
 {{trans-mid}}
+* Italian: {{t|it|al limite della sopportazione}}
 * Korean: {{t|ko|진퇴양난에 빠진}}
 * Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
 {{trans-bottom}}
