--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -22,6 +22,7 @@ Borrowed from {{bor|en|fro|emit}}, from {{der|en|la|amictus}}, from {{m|la|amici
 *: Old Irish: {{t|sga|micht|m}}
 {{trans-mid}}
 * Italian: {{t+|it|amitto|m}}
+* Polish: {{t+|pl|humerał|m}}
 * Portuguese: {{t+|pt|amicto|m}}
 {{trans-bottom}}
 
