--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -7,7 +7,7 @@
 ===Etymology 1===
 From {{inh|en|enm|pigge|t=pig, pigling}} (originally a term for a young pig, with adult pigs being {{m|enm|swine}}), apparently from {{inh|en|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad|t=mast, pig-fodder}}). Compare Middle Dutch {{cog|dum|pogge}}, {{m|dum|puggen}}, {{m|dum|pegsken|t=pigling}}.
 
-A connection to early modern {{cog|nl|bigge}} (contemporary {{m|nl|big|t=piglet}}), {{cog|fy|bigge|t=pigling}}{{,}} and similar terms in {{cog|gml|-}} are sometimes proposed, "but the phonology is difficult".<ref name="NED">''A new English dictionary on historical principles''</ref> Some sources say the words are "almost certainly not" related,<ref>{{R:Dictionary.com}}</ref> others consider a relation "probable, but not certain".<ref>M. Philippa: "Big". In: Etymologisch Woordenboek van het Nederlands, 2003-09.</ref>
+A connection to early modern {{cog|nl|bigge}} (contemporary {{m|nl|big|t=piglet}}), {{cog|fy|bigge|t=pigling}}{{,}} and similar terms in {{cog|gml|-}} is sometimes proposed, "but the phonology is difficult".<ref name="NED">''A new English dictionary on historical principles''</ref> Some sources say the words are "almost certainly not" related,<ref>{{R:Dictionary.com}}</ref> others consider a relation "probable, but not certain".<ref>M. Philippa: "Big". In: Etymologisch Woordenboek van het Nederlands, 2003-09.</ref>
 
 The slang sense of "police officer" is attested since at least 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
 
