--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -325,13 +325,18 @@ See {{l|da|bide}}.
 ==Old Irish==
 
 ===Alternative forms===
-* {{l|sga|bith}}
+* {{alter|sga|bith}}
+
+===Pronunciation===
+* {{IPA|sga|/bʲiðʲ/}}
 
 ===Verb===
 {{head|sga|verb form}}
 
-# {{inflection of|is||3|s|past|subj|lang=sga}}
-# {{inflection of|is||3|s|futr|lang=sga}}
+# {{infl of|sga|is||3|s|past|subj|;|3|s|futr}}
+
+===Mutation===
+{{sga-mutation|b|id}}
 
 ----
 
