--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -184,6 +184,7 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 *: Lower Sorbian: {{t|dsb|njewjericka|f}}
 *: Upper Sorbian: {{t+|hsb|wjewjerčka|f}}
 * Southern Altai: {{t|alt|тийиҥ|tr=tiyiń}}
+* Southern Ohlone: {{t|css|cicik}}
 * Southern Sami: {{t|sma|åeruve}}
 * Spanish: {{t+|es|ardilla|f}}
 * Sranan Tongo: {{t|srn|ekosi}}
