--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -9,14 +9,6 @@
 * {{rhymes|əʊ|lang=en}}
 
 ===Etymology 1===
-From {{inh|en|enm|blo}}, {{m|enm|bloo}}, from {{inh|en|ang|blāw||blue}}, from {{inh|en|gem-pro|*blēwaz||blue, dark blue, grey, black}}, from {{der|en|ine-pro|*bʰlēw-||yellow, blond, grey}}. Cognate with {{cog|la|flavus||yellow}}. More at {{l|en|blue}}.
-
-====Adjective====
-{{en-adj|er|more}}
-
-# {{lb|en|now|chiefly|dialectal|Northern England}} [[blue|Blue]].
-
-===Etymology 2===
 {{PIE root|en|bʰleh₁|id=blow}}
 From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate, sound}}, from {{inh|en|gem-pro|*blēaną||to blow}} (compare German {{m|de|blähen}}), from {{der|en|ine-pro|*bʰleh₁-||to swell, blow up}} (compare {{cog|la|flō||to blow}} and {{cog|xcl|բեղուն||fertile}}).
 
@@ -57,7 +49,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #: ''He '''blew''' the tires and the engine.''
 # {{lb|en|intransitive}} To suddenly fail destructively.
 #: ''He tried to sprint, but his ligaments '''blew''' and he was barely able to walk to the finish line.''
-# {{lb|en|intransitive|slang}} To be very [[undesirable]] (see also [[suck]]).
+# {{lb|en|intransitive|slang}} To be very [[undesirable]]. (See also {{m|en|suck}}.)
 #: ''This '''blows'''!''
 # {{lb|en|transitive|slang}} To recklessly [[squander]].
 #: ''I managed to '''blow''' $1000 at blackjack in under an hour.''
@@ -503,6 +495,14 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 {{trans-bottom}}
 
 {{trans-see|cocaine|snow}}
+
+===Etymology 2===
+From {{inh|en|enm|blo}}, {{m|enm|bloo}}, from {{inh|en|ang|blāw||blue}}, from {{inh|en|gem-pro|*blēwaz||blue, dark blue, grey, black}}, from {{der|en|ine-pro|*bʰlēw-||yellow, blond, grey}}. Cognate with {{cog|la|flavus||yellow}}. More at {{l|en|blue}}.
+
+====Adjective====
+{{en-adj|er|more}}
+
+# {{lb|en|now|chiefly|dialectal|Northern England}} [[blue|Blue]].
 
 ===Etymology 3===
 From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blēwe}}, from {{inh|en|gem-pro|*blewwaną|t=to beat}} (compare {{cog|non|blegði|t=wedge}}, {{cog|de|bläuen}}, {{cog|dum|blouwen}}). Related to [[block]].
