--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -1,4 +1,4 @@
-{{also|Chin|chín|chỉn|-chin}}
+{{also|Chin|chín|chỉn|-chin|chîⁿ}}
 ==English==
 {{Wiktionary:Picture dictionary/en:head}}
 [[File:Ambroise Thomas 2.jpg|thumb|right|Composer Ambrose Thomas with hand on chin (1).]]
