--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -57,6 +57,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 * Spanish: {{t+|es|cuadrúpedo|m}}, {{t|es|tetrápodo|m}}
 * Swedish: {{t|sv|fyrfotadjur|n}}, {{t|sv|tetrapod|c}}, {{t|sv|fyrfoting|c}}
 * Tagalog: {{t|tl|hayop na aapating-paa}}
+* Tajik: {{t+|tg|дубора}}
 * Telugu: {{t+|te|చతుష్పదము}}
 * Tocharian B: {{t|txb|śwerppewä}}
 * Ukrainian: {{t|uk|чотирино́ге|n}}
