--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -60,6 +60,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 * Tajik: {{t+|tg|дубора}}
 * Telugu: {{t+|te|చతుష్పదము}}
 * Tocharian B: {{t|txb|śwerppewä}}
+* Turkish: {{t|tr|dört ayaklı}}
 * Ukrainian: {{t|uk|чотирино́ге|n}}
 * Uzbek: {{t|uz|toʻrt barobar|alt=to'rt barobar}}
 * Volapük: {{t+|vo|follögaf}}
