--- a/en/s/subcapsular.801866.wikitext
+++ b/en/s/subcapsular.801866.wikitext
@@ -6,7 +6,10 @@
 ===Adjective===
 {{en-adj|-}}
 
-# {{lb|en|biology}} Below the [[capsule]] (of a joint etc)
+# {{lb|en|anatomy}} Below the [[capsule]] (of a joint, kidney etc)
+
+====Related terms====
+* [[subcapsule]]
 
 ===Anagrams===
 * {{anagrams|en|a=aabclprssuu|subscapular}}
