t+sah:[[таарбаҕан]] t+mnc:[[ᡨ᠋ᠠᡵᠪᠠᡥᡳ]] t+alt:[[тарбаган]] ([[WT:EDIT|Assisted]]) <marmot#52677259>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -80,6 +80,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Lithuanian: {{t|lt|švilpikas|m}}
 * Macedonian: {{t|mk|мрмот|m}}
 * Maltese: {{t|mt|far il-ġebel}}
+* Manchu: {{t|mnc|ᡨ᠋ᠠᡵᠪᠠᡥᡳ}}
 * Mongolian: {{t+|mn|тарвага}}
 * Navajo: {{t|nv|dilchaʼ}}
 * Norwegian: {{t|no|murmeldyr|n}}
@@ -100,6 +101,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Sorbian:
 *: Lower: {{t|dsb|boback|m}}
 *: Upper: {{t|hsb|bobak|m}}
+* Southern Altai: {{t|alt|тарбаган}}
 * Spanish: {{t|es|marmota|f}}
 * Swedish: {{t|sv|murmeldjur|n}}
 * Tajik: {{t|tg|суғур}}
@@ -112,6 +114,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Welsh: {{t|cy|twrlla}}, marmot
 * West Frisian: {{t|fy|bargemot}}, marmot
 * Written Oirat: {{t|xwo|ᡐᠠᠷᡋᠠᡎᠠ}}
+* Yakut: {{t|sah|таарбаҕан}}
 {{trans-bottom}}
 
 {{commons|Marmota}}
