t+es:[[Balcanes]] t-balance ([[WT:EDIT|Assisted]]) <Balkans#52753303>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -54,8 +54,8 @@ Of {{etyl|trk|en}} origin. Compare Turkish {{m|tr|balkan||wooded mountain range}
 * Galician: {{t|gl|Balcáns|m-p}}
 * German: {{t+|de|Balkan|m}}
 * Greek: {{t+|el|Βαλκάνια|n-p}}
-* Hungarian: {{t+|hu|Balkán}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|Balkán}}
 * Irish: {{t|ga|Balcáin|m-p|alt=na Balcáin}}
 * Japanese: {{t|ja|バルカン半島|tr=[[Barukan hantō]]|sc=Jpan}}
 * Kazakh: {{t|kk|Балқандар|p}}
@@ -72,6 +72,7 @@ Of {{etyl|trk|en}} origin. Compare Turkish {{m|tr|balkan||wooded mountain range}
 *: Roman: {{t+|sh|Balkan|m|sc=Latn}}
 * Slovak: {{t|sk|Balkán|m}}
 * Slovene: {{t+|sl|Balkán|m}}
+* Spanish: {{t+|es|Balcanes|m-p}}
 * Swedish: {{t|sv|Balkan}}
 * Turkish: {{t+|tr|Balkanlar|p}}
 {{trans-bottom}}
