--- a/en/h/hydrozoan.801199.wikitext
+++ b/en/h/hydrozoan.801199.wikitext
@@ -12,8 +12,9 @@
 {{trans-top|colonial coelenterates of the class ''Hydrozoa''}}
 * Chinese:
 *: Mandarin: {{t|cmn|水螅蟲類|sc=Hani}}, {{t|cmn|水螅虫类|tr=shuǐxī chónglèi|sc=Hani}}
-{{trans-mid}}
 * Finnish: {{t|fi|polyyppieläin}}
+{{trans-mid}}
+* Japanese: {{t|ja|ヒドロ虫類|tr=hidorochūrui}}
 * Russian: {{t+|ru|гидрозо́й|m}}
 {{trans-bottom}}
 
