--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -1,7 +1,7 @@
 {{also|Badger}}
-{{slim-wikipedia|Badger (disambiguation)}}
 ==English==
 {{was wotd|2009|August|7}}
+{{wikipedia|Badger}}
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/ˈbædʒə/|lang=en}}
