--- a/en/s/save up.746191.wikitext
+++ b/en/s/save up.746191.wikitext
@@ -13,6 +13,7 @@
 * Greek: {{t+|el|αποταμιεύω}}
 {{trans-mid}}
 * Maori: {{t|mi|penapena}}
+* Russian: {{t|ru|копить}}
 * Spanish: {{t+|es|ahorrar}}
 {{trans-bottom}}
 
