t+ga:[[cara cnis]] ([[WT:EDIT|Assisted]]) <bosom friend#52810660>

--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -21,6 +21,7 @@
 * Greek: {{t|el|επιστήθιος φίλος|m}}, {{t+|el|κολλητός|m}}, {{t|el|αδελφικός φίλος|m}}
 * Hungarian: {{t+|hu|kebelbarát}}
 {{trans-mid}}
+* Irish: {{t|ga|cara cnis|m}}
 * Italian: {{t|it|amico per la pelle|m}}
 * Japanese: {{t+|ja|親友|tr=しんゆう, shin'yū|sc=Jpan}}, {{t|ja|親しい友達|tr=したしいともだち, shitashii tomodachi|sc=Jpan}}, {{t|ja|心安い友人|tr=こころやすいゆうじん, kokoroyasui yūjin|sc=Jpan}}
 * Kannada: {{t+|kn|ಆಪ್ತಮಿತ್ರ}}, {{t+|kn|ಪ್ರಾಣಸ್ನೇಹಿತ}}
