--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -32,7 +32,7 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 
 ====Coordinate terms====
 * {{sense|address for a military superior officer}} {{l|en|ma'am}}
-* {{sense|address for a teacher}} {{l|en|ma'am}}
+* {{sense|address for a teacher}} {{l|en|miss}}
 * {{sense|address for stranger}} {{l|en|madam}}, {{l|en|ma'am}}, {{l|en|miss}}
 
 ====Derived terms====
