--- a/en/s/souple.856101.wikitext
+++ b/en/s/souple.856101.wikitext
@@ -26,7 +26,7 @@ From a UK dialect form of {{m|en|supple}}.
 ==French==
 
 ===Etymology===
-From {{etyl|la|fr}} ''[[supplex]]''.
+From {{der|fr|la|supplex}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
