--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -278,7 +278,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Portuguese: {{t+|pt|então}}, [[nesse]] {{t+|pt|caso}}
 * Quechua: {{t|qu|hinaspa}}
 * Romanian: {{t+|ro|atunci}}, {{t+|ro|apoi}}
-* Russian: {{t+|ru|тогда́}}, {{t|ru|в тако́м слу́чае}}
+* Russian: {{t+|ru|то}}, {{t+|ru|тогда́}}, {{t|ru|в тако́м слу́чае}}
 * Scottish Gaelic: {{t|gd|ma-thà}}, {{t|gd|a-rèist}}
 * Serbo-Croatian: {{t+|sh|onda}}, {{t+|sh|dakle}}, {{t|sh|u tom slučaju}}
 * Spanish: {{t+|es|entonces}}
