--- a/en/f/frizzante.745844.wikitext
+++ b/en/f/frizzante.745844.wikitext
@@ -17,6 +17,11 @@ From {{etyl|it|en}}.
 
 ==Italian==
 
+===Pronunciation===
+* {{IPA|/fridˈd͡zan.te/|lang=it}}
+* {{it-stress|frizzànte}}
+* {{hyphenation|friz|zan|te|lang=it}}
+
 ===Verb===
 {{head|it|present participle}}
 
