t+fr:[[usurier]] ([[WT:EDIT|Assisted]]) <moneylender#52928479>

--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -12,6 +12,7 @@
 {{trans-top|person who lends money}}
 * Danish: {{t|da|pengeudlåner|c}}
 * Finnish: {{t+|fi|rahanlainaaja}}
+* French: {{t+|fr|usurier|m}}
 * Georgian: {{t|ka|მევახშე}}
 * Greek: {{t+|el|τοκιστής|m}}
 *: Ancient: {{t|grc|δανειστής|m}}
