--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -59,13 +59,14 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 * Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}, {{t|ga|bláthnaid|f}} {{qualifier|female}}
 * Italian: {{t+|it|ermellino|m}}
 * Japanese: {{t+|ja|おこじょ|tr=okojo}}
+* Korean: {{t|ko|북방족제비}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|قاقِم}}, {{t|ckb|قاقوم}}
 *: Northern Kurdish: {{t|kmr|fisos}}, {{t|kmr|ququme}}
 * Ladin: {{t|lld|armelin}}
 * Latin: {{t|la|Mustela erminea|f}}
-* Latvian: {{t|lv|sermulis|m}}
 {{trans-mid}}
+* Latvian: {{t|lv|sermulis|m}}
 * Lithuanian: {{t|lt|šermuonėlis}}
 * Lower Sorbian: {{t|dsb|hermelin}}
 * Macedonian: {{t|mk|хермели́н|m}}, {{t|mk|ермели́н|m}}
