--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -60,3 +60,10 @@ From {{etyl|es|en}} {{m|es|las}} {{m|es|vegas||the fertile meadows}}.
 {{pt-proper noun|f}}
 
 # {{place|pt|city|s/Nevada|c/United States of America|t1=Las Vegas}}
+
+==Spanish==
+
+===Proper noun===
+{{es-proper noun|f}}
+
+# {{place|es|city|s/Nevada|c/United States of America|t1=Las Vegas}}
