--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -704,3 +704,15 @@ From {{inh|gd|sga|millid|t=spoils, ruins, destroys}}
 {{head|wrh|noun}}
 
 # {{lb|wrh|anatomy}} [[eye]]
+
+----
+
+==Yagara==
+
+===Noun===
+{{head|1=yxg|2=noun}}
+
+# {{alternative form of|mil|lang=yxg}}.
+
+===References===
+* State Library of Queensland, [https://www.slq.qld.gov.au/sites/default/files/0007-267289-turubul-body-parts-2_0.pdf Indigenous Language Wordlists Turubul Body Parts].
