Adding EN-AU audio file: in the reign of Queen Dick <in the reign of Queen Dick#53067573>

--- a/en/i/in the reign of Queen Dick.801800.wikitext
+++ b/en/i/in the reign of Queen Dick.801800.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 Since Dick is a man's name, it would never be borne by a queen.
 
+===Pronunciation===
+* {{audio|En-au-in the reign of Queen Dick.ogg|Audio (AU)|lang=en}}
+
 ===Prepositional phrase===
 {{en-PP|in the [[reign]] of [[queen|Queen]] [[dick|Dick]]}}
 
