Adding EN-AU audio file: land of opportunity <land of opportunity#53100470>

--- a/en/l/land of opportunity.856422.wikitext
+++ b/en/l/land of opportunity.856422.wikitext
@@ -1,6 +1,9 @@
 {{also|Land of Opportunity}}
 ==English==
 
+===Pronunciation===
+* {{audio|En-au-land of opportunity.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{head|en|noun}}
 
