Adding EN-AU audio file: make a killing <make a killing#53116617>

--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Pronunciation===
+* {{audio|En-au-make a killing.ogg|Audio (AU)|lang=en}}
+
 ===Verb===
 {{en-verb|makes a killing|making a killing|made a killing}}
 
