--- a/en/s/sawtooth.776083.wikitext
+++ b/en/s/sawtooth.776083.wikitext
@@ -15,7 +15,8 @@ From {{compound|en|saw|tooth}}
 {{en-noun|sawteeth|sawtooths}}
 
 # {{lb|en|plural "sawteeth"}} A cutting [[bit]] of a [[saw]].
-# {{lb|en|plural "sawtooths"}} [[sawtooth wave]]
+# {{lb|en|plural "sawtooths"}} A [[sawtooth wave]].
+# {{lb|en|plural "sawtooths"}} {{lb|en|entomology}} Any of various [[pierid]] butterflies of the genus ''[[w:Prioneris|Prioneris]]''.
 
 ====Translations====
 {{trans-top|cutting bit of a saw}}
