--- a/en/d/Dinkel.803423.wikitext
+++ b/en/d/Dinkel.803423.wikitext
@@ -13,6 +13,9 @@ From {{inh|de|gmh|dinkel}}, from {{inh|de|goh|dinchel}}, further origin unknown.
 # [[spelt]] {{gloss|a type of wheat, {{m|mul|Triticum spelta}}}}
 #: {{syn|de|Spelt|Spelz}}
 
+====Declension====
+{{de-decl-noun-m|s|}}
+
 ====Derived terms====
 * {{l|de|Dinkelbrot}}
 * {{l|de|Sommerdinkel}}
