Adding EN-AU audio file: rub salt in the wound <rub salt in the wound#53153649>

--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -6,6 +6,9 @@
 ===Etymology===
 Derived from the stinging sensation of salt deliberately being rubbed into an open, bleeding wound.
 
+===Pronunciation===
+* {{audio|En-au-rub salt in the wound.ogg|Audio (AU)|lang=en}}
+
 ===Verb===
 {{head|en|verb|head=[[rub]] [[salt in the wound]]}}
 
