--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -1,6 +1,9 @@
 ==English==
 {{wikipedia|Grace (prayer)}}
 
+===Pronunciation===
+* {{audio|En-au-say grace.ogg|Audio (AU)|lang=en}}
+
 ===Verb===
 {{en-verb|says grace|saying grace|said grace}}
 
