--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -174,6 +174,9 @@ From {{inh|ca|roa-oca|colp}}, from {{der|ca|LL.|colpus||stroke}}, from earlier {
 ===Etymology===
 Borrowed from {{bor|cs|de|Zopf}}.
 
+===Pronunciation===
+* {{cs-IPA}}
+
 ===Noun===
 {{cs-noun|g=m}}
 
