Adding EN-AU audio file: nutty as a fruitcake <nutty as a fruitcake#53175604>

--- a/en/n/nutty as a fruitcake.746571.wikitext
+++ b/en/n/nutty as a fruitcake.746571.wikitext
@@ -7,6 +7,9 @@
 ===Etymology===
 1914.
 
+===Pronunciation===
+* {{audio|En-au-nutty as a fruitcake.ogg|Audio (AU)|lang=en}}
+
 ===Adjective===
 {{en-adj|-}}
 
