Adding EN-AU audio file: cop <cop#53176356>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -5,6 +5,7 @@
 * {{a|RP}} {{IPA|/kɒp/|lang=en}}
 * {{rhymes|ɒp|lang=en}}
 * {{a|GenAm}} {{IPA|/kɑp/|lang=en}}
+* {{audio|En-au-cop.ogg|Audio (AU)|lang=en}}
 * {{rhymes|ɑp|lang=en}}
 
 ===Etymology 1===
