--- a/en/h/hydrozoan.801199.wikitext
+++ b/en/h/hydrozoan.801199.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{m|mul|Hydrozoa}} {{suffix|en||an}}
+{{ll|mul|Hydrozoa}} {{suffix|en||an}}
 
 ===Noun===
 {{en-noun}}
