--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -306,12 +306,12 @@ Borrowed from {{bor|ca|la|simplex}}.
 ==Chavacano==
 
 ===Etymology===
-From {{etyl|es|cbk}} {{m|es|simple||simple}}.
+From {{der|cbk|es|simple||simple}}.
 
 ===Adjective===
 {{head|cbk|adjective}}
 
-# [[simple]]
+# {{l|es|simple}}
 
 ----
 
