/* Min Nan */ |to [[snap]] something off; to [[break]] something; etc. <at#53194835>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -677,7 +677,7 @@ From {{der|lld|la|actus}}.
 ----
 
 ==Min Nan==
-{{zh-see|遏|poj}}
+{{zh-see|遏|poj|to [[snap]] something off; to [[break]] something; etc.}}
 
 ----
 
