--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -266,8 +266,8 @@ From {{inh|dum|odt|*ottar}}, from {{inh|dum|gem-pro|*utraz}}, from {{inh|dum|ine
 From {{inh|gmq-bot|non|otr}}, from {{inh|gmq-bot|gem-pro|*utraz}}, from {{inh|gmq-bot|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}.
 
 ===Pronunciation===
-* {{ipa|/ʊtːer/|[ɯ̞́ᵝtʰːe̞ɾ]|[ɔ́tʰːe̞ɾ]|lang=gmq-bot}}
-*: {{rhymes|ʊ́tɛr|ɛr|lang=gmq-bot}}
+* {{ipa|/ʊtːər/|[ɯ̞́ᵝtʰːe̞ɾ]|[ɔ́tʰːe̞ɾ]|lang=gmq-bot}}
+*: {{rhymes|ʊ́tər|ər|lang=gmq-bot}}
 
 ===Noun===
 {{head|gmq-bot|noun|g=m}}
