--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -83,7 +83,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 * Georgian: {{t|ka|კავი}}, {{t|ka|კაუჭი}}
 * German: {{t+|de|Krücke}}, {{t+|de|Krückstock}} {{qualifier|crutch, cane}}, {{t|de|Hirtenstab|m}}, {{t|de|Krummstab|m}}
 * Greek: {{t+|el|γκλίτσα|f}}
-*: Ancient Greek: {{t|grc|καλαῦροψ|f}}
+*: Ancient: {{t|grc|καλαῦροψ|f}}
 * Icelandic: {{t|is|hirðingjastafur|m}}
 {{trans-mid}}
 * Irish: {{t|ga|crúca|m}}, {{t|ga|bachall|f}}, {{t|ga|caimín|m}}, {{t|ga|camóg|f}}
