Adding EN-AU audio file: pile of shit <pile of shit#53199230>

--- a/en/p/pile of shit.742053.wikitext
+++ b/en/p/pile of shit.742053.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Pronunciation===
+* {{audio|En-au-pile of shit.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{en-noun|piles of shit}}
 
