Adding EN-AU audio file: quail-pipe <quail-pipe#53199250>

--- a/en/q/quail-pipe.801801.wikitext
+++ b/en/q/quail-pipe.801801.wikitext
@@ -1,6 +1,9 @@
 {{also|quail pipe}}
 ==English==
 
+===Pronunciation===
+* {{audio|En-au-quail-pipe.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{en-noun}}
 
