--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -136,6 +136,10 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{inh|en|ang|ātendan||to 
 * {{l|en|tend}}
 * {{l|en|tinder}}
 
+===References===
+* {{R:OneLook}}
+* {{R:Century 1911}}
+
 ===Anagrams===
 * {{anagrams|en|a=adentt|Adnett}}
 
