/* Translations */ +el <weasel#53229926>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -147,6 +147,11 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gem-pro|*
 * Walloon: {{t+|wa|bascolidî|m}}
 {{trans-bottom}}
 
+{{trans-top|yarn winder}}
+* Greek: {{t+|el|ανέμη|f}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{checktrans-top}}
 * Albanian: {{t-check|sq|nuse e lalës}}
 * Basque: {{t+check|eu|erbinude}}, {{t-check|eu|satandre}}
