--- a/en/l/LDPE.26240.wikitext
+++ b/en/l/LDPE.26240.wikitext
@@ -7,7 +7,7 @@
 
 ====Translations====
 {{trans-top|low-density polyethylene}}
-* Translingual: {{t|fr|PE-LD}}
+* Translingual: {{t|mul|PE-LD}}
 {{trans-mid}}
 * French: {{t|fr|PEBD}}
 {{trans-bottom}}
