--- a/en/l/LDPE.26240.wikitext
+++ b/en/l/LDPE.26240.wikitext
@@ -5,6 +5,11 @@
 
 # {{lb|en|organic compound}} {{initialism of|lang=en|low-density [[polyethylene]]}}
 
+====Related terms====
+{{sense|low-density polyethylene}}
+* {{l|en|HDPE}}
+* {{l|en|PE}}
+
 ====Translations====
 {{trans-top|low-density polyethylene}}
 * Translingual: {{t|mul|PE-LD}}
