t+uk:[[бульбашка]] ([[WT:EDIT|Assisted]]) <bubble#53237945>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -241,6 +241,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Portuguese: {{t+|pt|bolha|f}}
 * Russian: {{t+|ru|пузы́рь|m}}, {{t+|ru|пузырёк|m}}
 * Telugu: {{t+|te|బుడగ}}
+* Ukrainian: {{t+|uk|бульбашка|f}}
 {{trans-bottom}}
 
 {{trans-top|period of intense speculation in a market}}
